--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ajv": "^6.5.5",
     "bootstrap": "^4.1.3",
     "vue": "^2.5.17",
-    "vue-strap": "^1.1.40"
+    "vue-strap": "^1.1.40",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
