--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "ajv": "^6.5.5",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "vue": "^2.5.17",
     "vue-strap": "^1.1.40",
